Added multiple files

--- a/html/lists.html
+++ b/html/lists.html
@@ -4,29 +4,44 @@
 	</head>
 	
 	<body>
+		<!-- 
+			Unordered List (ul)
+				List Item (li)
+		-->
+	
 		<ul type="square">
-			<li>Karachi</li>
-			<li>Islamabad</li>
-			<li>Quetta</li>
-			<li>Peshawar</li>
+			<li>Item 1</li>
+			<li>Item 2</li>
+			<li>Item 3</li>
+			<li>Item 4</li>
 		</ul>
 		
-		<ol type="I">
-			<li>Karachi</li>
-			<li>Islamabad</li>
-			<li>Quetta</li>
-			<li>Peshawar</li>
+		
+		<!-- 
+			Ordered List (ul)
+				List Item (li)
+		-->
+	
+		<ol type="i">
+			<li>Item 1</li>
+			<li>Item 2</li>
+			<li>Item 3</li>
+			<li>Item 4</li>
 		</ol>
 		
-		<ol type="I">
+		
+		
+		<!-- Example of Nested List -->
+		
+		<ol>
 			<li>
-				The capital of pakistan is __________
+				Select options
 				
 				<ol type="A">
-					<li>Karachi</li>
-					<li>Islamabad</li>
-					<li>Quetta</li>
-					<li>Peshawar</li>
+					<li>Option</li>
+					<li>Option</li>
+					<li>Option</li>
+					<li>Option</li>
 				</ol>
 			</li>
 		</ol>
