--- a/html/tables.html
+++ b/html/tables.html
@@ -4,11 +4,15 @@
 	</head>
 	
 	<body>
-		<table border="1" cellspacing="0" bordercolor="grey" width="700" cellpadding="10" align="center" bgcolor="lightgrey">
+		<table border="1" cellspacing="0" bordercolor="grey" width="1000" cellpadding="10" align="center" bgcolor="lightgrey">
 			<thead>
 				<tr>
 					<th>S#</th>
-					<th>Emplyee Name</th>
+					<th> 
+						<font color="d7f5df" face="arial" size="7">
+							Emplyee Name
+						 </font> 
+					</th>
 					<th>Department</th>
 					<th>Salary</th>
 				</tr>
