updated selectorss file

--- a/css/selectors.html
+++ b/css/selectors.html
@@ -29,5 +29,14 @@
     <h1>Hello World</h1>
     <h2>CSS is awesome</h2>
     <h2>CSS is cool</h2>
+
+    <input type="text" />
+
+    <ul>
+      <li>item 1</li>
+      <li>item 2</li>
+      <li>item 3</li>
+      <li>item 4</li>
+    </ul>
   </body>
 </html>
