--- a/css/login.html
+++ b/css/login.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-group">
-          <input type="submit" id="login-btn" value="Login" />
+          <input type="button" id="login-btn" value="Login" />
         </div>
       </form>
     </div>
