--- a/navbar.html
+++ b/navbar.html
@@ -13,7 +13,16 @@
       </div>
 
       <ul class="nav-menu">
-        <li><a href="#">Projects</a></li>
+        <li>
+          <a href="#">Projects</a>
+
+          <ul class="dropdown-menu">
+            <li><a href="#">SaaS</a></li>
+            <li><a href="#">POS</a></li>
+            <li><a href="#">Management</a></li>
+            <li><a href="#">Travel</a></li>
+          </ul>
+        </li>
         <li><a href="#">Our Team</a></li>
         <li><a href="#">Our Vision</a></li>
         <li><a href="#">Contact</a></li>
